--- a/NewtonGeneral/cursos.html
+++ b/NewtonGeneral/cursos.html
@@ -152,10 +152,10 @@
 
     let cursosData = {
       algebra: [
-        { title: 'Teoria de Exponentes', video: 'https://www.youtube.com/embed/QTOF9_9LZSs?si=gwsP_gNTxXUs0xKM', pdf: 'https://pdf.e-droid.net/pdf/d3559601-35243366-teoriaexoibe.pdf?v=5', practicaId: 'algebra-1' },
-        { title: 'Polinomios', video: 'https://www.youtube.com/embed/tnf_wQ7-_Pw?si=K0RIw_ykte6GlU4i', pdf: 'https://pdf.e-droid.net/pdf/d3559601-35258041-polinomios.pdf?v=0', practicaId: 'algebra-2' },
-        { title: 'Productos Notables', video: 'https://www.youtube.com/embed/G-ym95yl3Es?si=KFhxUXzbSZDOqsFH', pdf: '', practicaId: 'algebra-3' },
-        { title: 'División de polinomios', video: 'https://www.youtube.com/embed/63y_SGwAoV4?si=B3VYnb_x6wpbJ-fO', pdf: '', practicaId: 'algebra-4' },
+        { title: 'Teoria de Exponentes', video: 'https://www.youtube.com/embed/QTOF9_9LZSs?si=gwsP_gNTxXUs0xKM', pdf: 'https://drive.google.com/file/d/1KUQHmC8tEt2n9VLNHUUurk-d7EMho6Pz/preview', practicaId: 'algebra-1' },
+        { title: 'Polinomios', video: 'https://www.youtube.com/embed/tnf_wQ7-_Pw?si=K0RIw_ykte6GlU4i', pdf: 'https://drive.google.com/file/d/1VMmjAxqiBliQ5CyTfhQKiX7GBkweNQvF/preview', practicaId: 'algebra-2' },
+        { title: 'Productos Notables', video: 'https://www.youtube.com/embed/G-ym95yl3Es?si=KFhxUXzbSZDOqsFH', pdf: 'https://drive.google.com/file/d/1JPass7rTNxz6sPOexj_DGYHvdAt1CC7Y/preview', practicaId: 'algebra-3' },
+        { title: 'División de polinomios', video: 'https://www.youtube.com/embed/63y_SGwAoV4?si=B3VYnb_x6wpbJ-fO', pdf: 'https://drive.google.com/file/d/1nRy8s_LkKARFv1yT34e47sseKXwKR_B7/preview', practicaId: 'algebra-4' },
         { title: 'Cocientes Notables', video: 'https://www.youtube.com/embed/Bqm4_wfIOiU?si=SVk8z-gWWBkxN1uX', pdf: '', practicaId: 'algebra-5' },
         { title: 'Factorización', video: 'https://www.youtube.com/embed/-tS50MayXiE?si=5HV9KNcve6YqHy4S', pdf: '', practicaId: 'algebra-6' },
       ],
