--- a/NewtonGeneral/cursos.html
+++ b/NewtonGeneral/cursos.html
@@ -156,8 +156,8 @@
         { title: 'Polinomios', video: 'https://www.youtube.com/embed/tnf_wQ7-_Pw?si=K0RIw_ykte6GlU4i', pdf: 'https://drive.google.com/file/d/1VMmjAxqiBliQ5CyTfhQKiX7GBkweNQvF/preview', practicaId: 'algebra-2' },
         { title: 'Productos Notables', video: 'https://www.youtube.com/embed/G-ym95yl3Es?si=KFhxUXzbSZDOqsFH', pdf: 'https://drive.google.com/file/d/1JPass7rTNxz6sPOexj_DGYHvdAt1CC7Y/preview', practicaId: 'algebra-3' },
         { title: 'División de polinomios', video: 'https://www.youtube.com/embed/63y_SGwAoV4?si=B3VYnb_x6wpbJ-fO', pdf: 'https://drive.google.com/file/d/1nRy8s_LkKARFv1yT34e47sseKXwKR_B7/preview', practicaId: 'algebra-4' },
-        { title: 'Cocientes Notables', video: 'https://www.youtube.com/embed/Bqm4_wfIOiU?si=SVk8z-gWWBkxN1uX', pdf: '', practicaId: 'algebra-5' },
-        { title: 'Factorización', video: 'https://www.youtube.com/embed/-tS50MayXiE?si=5HV9KNcve6YqHy4S', pdf: '', practicaId: 'algebra-6' },
+        { title: 'Cocientes Notables', video: 'https://www.youtube.com/embed/Bqm4_wfIOiU?si=SVk8z-gWWBkxN1uX', pdf: 'https://drive.google.com/file/d/1Ts6F0HwWxaNK12Y-DRjRv9am3ORyEJOu/preview', practicaId: 'algebra-5' },
+        { title: 'Factorización', video: 'https://www.youtube.com/embed/-tS50MayXiE?si=5HV9KNcve6YqHy4S', pdf: 'https://drive.google.com/file/d/10Ek_lKF_N0FytANcwNbT8XeZy1d2XRNu/preview', practicaId: 'algebra-6' },
       ],
       aritmetica: [
         { title: 'Lógica proposicional', video: 'https://www.youtube.com/embed/3I5OJTPyKRY?si=wEkg0MJUOEzgUnmy', pdf: '', practicaId: 'aritmetica-1' },
