--- a/NewtonGeneral/cursos.html
+++ b/NewtonGeneral/cursos.html
@@ -160,8 +160,8 @@
         { title: 'Factorización', video: 'https://www.youtube.com/embed/-tS50MayXiE?si=5HV9KNcve6YqHy4S', pdf: 'https://drive.google.com/file/d/10Ek_lKF_N0FytANcwNbT8XeZy1d2XRNu/preview', practicaId: 'algebra-6' },
       ],
       aritmetica: [
-        { title: 'Lógica proposicional', video: 'https://www.youtube.com/embed/3I5OJTPyKRY?si=wEkg0MJUOEzgUnmy', pdf: '', practicaId: 'aritmetica-1' },
-        { title: 'Teoría de conjuntos', video: 'https://www.youtube.com/embed/PvfmttWrGM0?si=GX22tMz1piJC4ojt', pdf: '', practicaId: 'aritmetica-2' },
+        { title: 'Lógica proposicional', video: 'https://www.youtube.com/embed/3I5OJTPyKRY?si=wEkg0MJUOEzgUnmy', pdf: 'https://drive.google.com/file/d/1ixIfBsF0sEH8NPQDi_TRmcPJz-bMfJb1/preview', practicaId: 'aritmetica-1' },
+        { title: 'Teoría de conjuntos', video: 'https://www.youtube.com/embed/PvfmttWrGM0?si=GX22tMz1piJC4ojt', pdf: 'https://drive.google.com/file/d/1ixIfBsF0sEH8NPQDi_TRmcPJz-bMfJb1/preview', practicaId: 'aritmetica-2' },
         { title: 'Numeración', video: 'https://www.youtube.com/embed/WuS487rpc5Q?si=Wj93seUpywS1Q85w', pdf: '', practicaId: 'aritmetica-3' },
         { title: 'Criterios de Divisibilidad', video: 'https://www.youtube.com/embed/vLWiNb8jLgY?si=DmBbxuzpx9Ng36B7', pdf: '', practicaId: 'aritmetica-4' },
       ],
