--- a/NewtonGeneral/cursos.html
+++ b/NewtonGeneral/cursos.html
@@ -162,7 +162,7 @@
       aritmetica: [
         { title: 'Lógica proposicional', video: 'https://www.youtube.com/embed/3I5OJTPyKRY?si=wEkg0MJUOEzgUnmy', pdf: 'https://drive.google.com/file/d/1ixIfBsF0sEH8NPQDi_TRmcPJz-bMfJb1/preview', practicaId: 'aritmetica-1' },
         { title: 'Teoría de conjuntos', video: 'https://www.youtube.com/embed/PvfmttWrGM0?si=GX22tMz1piJC4ojt', pdf: 'https://drive.google.com/file/d/167p7hqBvuI7B4862b0xg4J-vPeqbHqJW/preview', practicaId: 'aritmetica-2' },
-        { title: 'Numeración', video: 'https://www.youtube.com/embed/WuS487rpc5Q?si=Wj93seUpywS1Q85w', pdf: '', practicaId: 'aritmetica-3' },
+        { title: 'Numeración', video: 'https://www.youtube.com/embed/WuS487rpc5Q?si=Wj93seUpywS1Q85w', pdf: 'https://drive.google.com/file/d/1a8R0pwGmUGs5IOH8PKCF2B772uulfZLm/preview', practicaId: 'aritmetica-3' },
         { title: 'Criterios de Divisibilidad', video: 'https://www.youtube.com/embed/vLWiNb8jLgY?si=DmBbxuzpx9Ng36B7', pdf: '', practicaId: 'aritmetica-4' },
       ],
       geometria: [
