--- a/NewtonGeneral/cursos.html
+++ b/NewtonGeneral/cursos.html
@@ -166,7 +166,7 @@
         { title: 'Criterios de Divisibilidad', video: 'https://www.youtube.com/embed/vLWiNb8jLgY?si=DmBbxuzpx9Ng36B7', pdf: '', practicaId: 'aritmetica-4' },
       ],
       geometria: [
-        { title: 'Segmentos - Ángulos', video: 'https://www.youtube.com/embed/II89moaL214?si=me6SdzFGNK69JPY2', pdf: '', practicaId: 'geometria-1' },
+        { title: 'Segmentos - Ángulos', video: 'https://www.youtube.com/embed/II89moaL214?si=me6SdzFGNK69JPY2', pdf: 'https://drive.google.com/file/d/1lKGr2HbwUme77Unk9b74AnojV885xXiV/preview', practicaId: 'geometria-1' },
         { title: 'Triángulos', video: 'https://www.youtube.com/embed/sRD54NtabPM?si=P4vEl2sF-2IRfElL', pdf: '', practicaId: 'geometria-2' },
       ],
       trigonometria: [
