--- a/NewtonGeneral/practicaxuni.html
+++ b/NewtonGeneral/practicaxuni.html
@@ -225,6 +225,18 @@
                 <img src="img/sanmarcos.png" alt="Imagen Opción 3">
             </div>
         </div>
+        <div class="opcion">
+            <div class="texto-container">
+                <h2>UNSA-AREQUIPA</h2>
+                <p>Examenes virtuales del tipo admision de <br>UNSA - AREQUIPA</p>
+                <div class="botones-container">
+                    <a href="go:UNSA" class="boton-examen">Ver Exámenes</a>
+                </div>
+            </div>
+            <div class="imagen-circular-container">
+                <img src="https://scontent-lim1-1.xx.fbcdn.net/v/t1.6435-9/95322957_135866061394977_6592645671168245760_n.jpg?_nc_cat=111&ccb=1-7&_nc_sid=2285d6&_nc_eui2=AeGz5SCy8PGqmlmwwmfywKT6J-kcoxNievcn6RyjE2J695VVrczVL_GvoTL1EbZ0Q33cqGM8poeR3qmsRxsC2LsL&_nc_ohc=8qHKbwj2gDAQ7kNvwE84ZjF&_nc_oc=AdnQg3CsW-SCe8IPsyrS6dyUKVE_V9otenj13dSx8tut8XeUTn2B1OKnK78-TUoxlHPSY2l0bFkHpD8n6gvTJqYo&_nc_zt=23&_nc_ht=scontent-lim1-1.xx&_nc_gid=fhVIKfq4sNfD6u8OOEC8Zg&oh=00_AfTfgr5HmBKC1zw-2hb-DEJ1-HgUEyL7UJ97HeYefgDWsA&oe=68AB15AD" alt="Imagen Opción 3">
+            </div>
+        </div>
     </div>
 </body>
 </html>
