--- a/NewtonGeneral/index.html
+++ b/NewtonGeneral/index.html
@@ -55,11 +55,12 @@
         <a href="go:PRASEC"><img src="img/demo4.png" alt="img3"></a>
 
       </div>
-
-      <div>
+<!-- <div>
         <a href="#"><img src="img/demo2.jpg" alt="img4"></a>
 
       </div>
+      -->
+     
 
     </section>
 
