--- a/politicaPOMOC.html
+++ b/politicaPOMOC.html
@@ -94,7 +94,7 @@
   </main>
 
   <footer>
-    <p>&copy; 2025 X-ACADEMY. Todos los derechos reservados.</p>
+    <p>&copy; 2025 POMOC. Todos los derechos reservados.</p>
   </footer>
 </body>
 </html>
