--- a/politicaPOMOC.html
+++ b/politicaPOMOC.html
@@ -81,7 +81,7 @@
 
     <h2>Eliminación de datos</h2>
     <p>El usuario puede eliminar sus datos personales dándose de baja de la app. Esto se puede hacer mediante el enlace disponible en las opciones de perfil de usuario. Si deseas saber ¿Como eliminar?</p>
-    <a href="eliminarcuenta.html">AQUI</a>
+    <a href="eliminarcuentaPOMOC.html">AQUI</a>
     <h2>Restricciones de contenido</h2>
     <p>No aceptamos la publicación de contenido exclusivamente para adultos, como imágenes con contenido sexual o imágenes de extrema violencia. Nos reservamos el derecho de moderar o eliminar dicho contenido.</p>
 
