--- a/NewtonGeneral/cursos.html
+++ b/NewtonGeneral/cursos.html
@@ -196,9 +196,10 @@
       'aritmetica-2': [{ text: 'Práctica de Teoria de Conjuntos', link: 'go:ARIT02' }],
       'aritmetica-3': [{ text: 'Práctica de Numeración', link: 'go:ARIT03' }],
       'geometria-1': [{ text: 'Práctica de Segmentos - Angulos', link: 'go:GEO01' }],
-      'geometria-2': [{ text: 'Práctica de Triangulos', link: 'go:GEO02' }],
-      'geometria-3': [{ text: 'Práctica de Polígonos y Cuadriláteros', link: 'go:GEO03' }],
-      'geometria-4': [{ text: 'Práctica de Polígonos y Cuadriláteros', link: 'go:GEO03' }],
+      'geometria-2': [{ text: 'Práctica de Triángulos', link: 'go:GEO02' }],
+      'geometria-3': [{ text: 'Práctica de Congruencia de triángulos', link: 'go:GEO03' }],
+      'geometria-4': [{ text: 'Práctica de Polígonos y Cuadriláteros', link: 'go:GEO04' }],
+      'geometria-5': [{ text: 'Práctica de Polígonos y Cuadriláteros', link: 'go:GEO04' }],
       'trigonometria-1': [{ text: 'Práctica de Sistema de medida angular', link: 'go:TRI01' }],
       'trigonometria-2': [{ text: 'Práctica de Razones trigonométricas', link: 'go:TRI02' }],
       'estadistica-1': [{ text: 'Práctica de Tablas I', link: 'go:EST01' }],
