--- a/NewtonGeneral/practicaxuni.html
+++ b/NewtonGeneral/practicaxuni.html
@@ -330,7 +330,7 @@
         </div>
 
         <div class="opciones-grid" id="opciones-grid">
-            <a href="go:UNJ" class="opcion" data-category="lima">
+            <a href="go:FAUSTINO" class="opcion" data-category="lima">
                 <div class="opcion-icon">
                     <img src="img/ujfsc.png" alt="UNJFSC">
                 </div>
@@ -692,3 +692,4 @@
 </body>
 
 </html>
+
