--- a/NewtonGeneral/cursos.html
+++ b/NewtonGeneral/cursos.html
@@ -185,6 +185,17 @@
         { title: 'Tejido óseo', video: 'https://www.youtube.com/embed/iPSqE5Hld-E?si=W77QiDHRwQ4g7Rph', pdf: '', PrácticaId: 'anatomia-2' },
         { title: 'Tejido cartilaginoso', video: 'https://www.youtube.com/embed/meUDcJrC6v8?si=Vx-rKIJ_E_ovuqGm', pdf: '', PrácticaId: 'anatomia-3' },
       ],
+      biologia: [
+        { title: 'Origen de la Vida - Evolucion', video: 'https://www.youtube.com/embed/fbZyNQgxY0M?si=qboC983iLKaZT6JE', pdf: '', PrácticaId: 'biologia-1' },
+        { title: 'Bioelementos y Biomoleculas ', video: 'https://www.youtube.com/embed/OqIhYmEHzIY?si=hH_uGSwpxdeLWJfS', pdf: '', PrácticaId: 'biologia-2' },
+        { title: 'Glúcidos - Lípidos - Proteinas', video: 'https://www.youtube.com/embed/p0k0T2epEd8?si=jjYX9S4AHy5vwAIa', pdf: '', PrácticaId: 'biologia-3' },
+      ],
+      literatura: [
+        { title: 'Figuras Literarias', video: 'https://www.youtube.com/embed/vxogyM8XP3g?si=_zDzTbF3mCDlrCw1', pdf: '', PrácticaId: 'literatura-1' },
+        { title: 'Clasicismo y medievalismo', video: 'https://www.youtube.com/embed/pUIE-1Pdri8?si=tP_QPv50WuVfUpG7', pdf: '', PrácticaId: 'literatura-2' },
+        { title: 'Renacimiento', video: 'https://www.youtube.com/embed/kDg9OCXvpfI?si=Sd9w1ygFX8NpEN4p', pdf: '', PrácticaId: 'literatura-3' },
+        { title: 'Neoclasicismo', video: 'https://www.youtube.com/embed/rxH75nZoMUw?si=rFkY_R_3wIGPCbsb', pdf: '', PrácticaId: 'literatura-3' },
+      ],
       // Agrega más cursos y temas aquí
     };
 
@@ -207,6 +218,12 @@
       'anatomia-1': [{ text: 'Quiz de huesos', link: 'go:ANA1' }],
       'anatomia-2': [{ text: 'Quiz del Tejido Oseo', link: 'go:ANA2' }],
       'anatomia-3': [{ text: 'Quiz del Tejido Catilaginoso', link: 'go:ANA3' }],
+      'biologia-1': [{ text: 'Quiz de la evolucion', link: 'go:BIO1' }],
+      'biologia-2': [{ text: 'Quiz de Bioelementos', link: 'go:BIO2' }],
+      'biologia-3': [{ text: 'Quiz de Glucidos y lipidos', link: 'go:BIO3' }],
+      'literatura-1': [{ text: 'Quiz de Figuras literarias', link: 'go:BIO1' }],
+      'literatura-2': [{ text: 'Quiz de Clasicismo y Medievalismo', link: 'go:BIO2' }],
+      'literatura-3': [{ text: 'Quiz del Renacimiento y Neoclasicismo', link: 'go:BIO3' }],
       // Agrega más prácticas según tus PrácticaId
     };
 
