--- a/NewtonGeneral/practicaxuni.html
+++ b/NewtonGeneral/practicaxuni.html
@@ -354,7 +354,7 @@
                 <span class="opcion-desc">Universidad Nacional Mayor de San Marcos</span>
                 <div class="modal-trigger" data-modal="modal-unmsm">i</div>
             </a>
-            <a href="go:PRX" class="opcion" data-category="lima">
+            <a href="go:UNTELS" class="opcion" data-category="lima">
                 <div class="opcion-icon">
                     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/08/Untels_01.png/250px-Untels_01.png" alt="UNTEL">
                 </div>
@@ -494,13 +494,13 @@
     <div id="modal-untel" class="modal">
         <div class="modal-content">
             <div class="modal-header">
-                <h2>UNTEL</h2>
+                <h2>UNTELS</h2>
                 <button class="close-btn">&times;</button>
             </div>
             <ul>
                 <li>
                     <h4>Información de la universidad</h4>
-                    <a href="http://www.untels.edu.pe/" target="_blank">Sitio web oficial UNTEL</a>
+                    <a href="http://www.untels.edu.pe/" target="_blank">Sitio web oficial UNTELS</a>
                 </li>
                 <li>
                     <h4>Carreras disponibles</h4>
@@ -692,4 +692,5 @@
 </body>
 
 </html>
+
 
